Now Using Shared utilizeR Library

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,3 +16,4 @@ importFrom(methods,setClass)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
 importFrom(methods,validObject)
+importFrom(utilizeR,ignoreErrors)
