--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,10 +30,12 @@ LazyData: true
 URL: http://www.github.com/thomasWeise/learnerSelectoR
 BugReports: http://www.github.com/thomasWeise/learnerSelectoR/issues
 Depends: R (>= 3.3.0)
-Imports: methods (>= 3.3.2)
+Imports: methods (>= 3.3.2),
+         utilizeR (>= 0.8.0)
 Suggests: testthat (>= 2.0.0),
           roxygen2 (>= 6.0.1),
           minpack.lm (>= 1.2.1)
+Remotes: github::thomasWeise/utilizeR
 RoxygenNote: 6.0.1.9000
 Collate: 
     'check.R'
