--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,4 +16,5 @@ importFrom(methods,setClass)
 importFrom(methods,setGeneric)
 importFrom(methods,setMethod)
 importFrom(methods,validObject)
+importFrom(utilizeR,function.args)
 importFrom(utilizeR,ignoreErrors)
