--- a/.travis.yml
+++ b/.travis.yml
@@ -9,4 +9,5 @@ r:
   - release
   - devel
 after_script:
-  - R -e 'devtools::install_github("thomasWeise/learnerSelectoR")'
+  - |
+    R -e 'if(require("learnerSelectoR")) { remove.packages("learnerSelectoR"); }; r <- devtools::install_github("thomasWeise/learnerSelectoR"); if(r) { cat("OK\n"); q(save="no", status=0); } else { cat("error: ", r, "\n", sep="", collapse=""); q(save="no", status=1); }'
